--- a/openapi-defs/api_store/NOC-fr.yaml
+++ b/openapi-defs/api_store/NOC-fr.yaml
@@ -9,17 +9,17 @@ x-api-store-plans:
     name: Public Plan
     description: All users should subscribe to the Public Plan.
 info:
-  title: Notice of Compliance (NOC)
+  title: Avis de conformité (AC)
   description: |
-    A Notice of Compliance (NOC) is issued to a manufacturer following the satisfactory review of a submission for a new drug, and signifies compliance with the Food and Drug Regulations.
+    Un Avis de conformité (AC) est émis au fabricant si la présentation de drogue nouvelle est jugée conforme au Règlement sur les aliments et drogues après un examen complet.
 
-    The database is updated nightly and contains NOC information on human drugs from January 1, 1994 to date. It also contains NOC information on Veterinary drugs from September 19, 2000 to date. Through a phased in approach Health Canada will populate the remaining NOCs for Veterinary drugs from January 1, 1994 to September 18, 2000.
+    La base de données est mise à jour tous les soirs et elle comprend des renseignements sur les AC concernant les médicaments pour usage humain émis depuis le 1er janvier 1994 jusqu'à ce jour. Elle comprend également les renseignements sur les AC concernant les médicaments vétérinaires émis depuis le 19 septembre 2000 jusqu'à ce jour. Santé Canada ajoutera progressivement les AC concernant les médicaments vétérinaires émis entre le 1er janvier 1994 et le 18 septembre 2000.
   version: "0.1"
 
 schemes:
   - https
 host: noc-hc-sc-apicast-staging.beta.api.canada.ca
-basePath: /api/notice-of-compliance/
+basePath: /api/avis-de-conformite/
 produces:
   - application/json
   - application/xml
@@ -28,7 +28,7 @@ paths:
   /drugproduct:
     get:
       tags:
-        - Drug Product
+        - Produit pharmaceutique
       description: Returns all drug products.
       parameters:
         - $ref: "#/parameters/UserKeys"
@@ -53,7 +53,7 @@ paths:
   /noticeofcompliancemain:
     get:
       tags:
-        - Notice of Compliance
+        - Avis de conformité
       description: Returns all compliance notifications
       parameters:
         - $ref: "#/parameters/UserKeys"
@@ -78,7 +78,7 @@ paths:
   /dosageform:
     get:
       tags:
-        - Dosage Form
+        - Forme posologique
       description: Returns all dosage forms
       parameters:
         - $ref: "#/parameters/UserKeys"
@@ -103,7 +103,7 @@ paths:
   /medicinalingredient:
     get:
       tags:
-        - Medicinal Ingredient
+        - Ingrédient médicinal
       description: Returns all medicinal ingredients
       parameters:
         - $ref: "#/parameters/UserKeys"
@@ -128,7 +128,7 @@ paths:
   /route:
     get:
       tags:
-        - Route of Administration
+        - Voie d'administration
       description: Returns all administration routes
       parameters:
         - $ref: "#/parameters/UserKeys"
@@ -153,7 +153,7 @@ paths:
   /vetspecies:
     get:
       tags:
-        - Veterinary Species
+        - Espèces animales
       description: Returns all veterinary species
       parameters:
         - $ref: "#/parameters/UserKeys"
@@ -183,157 +183,194 @@ definitions:
 
   DosageForm:
     type: object
-    description: The dosage form is the form in which the product is supplied. It is the combination of the form in which a product is presented [for example (e.g.)] in tablet, capsule or powder form, and the physical form in which it is administered, [for example, (e.g.)] in a powder to be administered in solution.
+    description: Forme sous laquelle le produit est vendu. Il s'agit de la combinaison de la forme sous laquelle le fabricant présente un produit, p. ex. comprimé, gélule, poudre, et de la forme sous laquelle le produit est administré, p. ex. poudre pour une solution.
     properties:
       noc_number:
         type: string
-        description: The number assigned to the Notice of Compliance.
+        description: Le numéro attribué à un avis de conformité.
+
       noc_pf_din_product_id:
         type: string
-        description: The identification number assigned to the DIN product.
+        description: Le numéro d'identification attribué à un produit pharmaceutique.
+
       noc_pf_form_name:
         type: string
-        description: The dosage form.
+        description: La forme posologique.
+
     xml:
       name: DosageForm
 
   DrugProduct:
     type: object
-    description: Basic information about the product, such as brand name and Drug Identification Number. The brand name is the unique name under which the manufacturer of a drug product advertises and sells it
+    description: Information sur le produit pharmaceutique, telles que le nom commercial et l'identification numérique de drogue. La marque du produit est le nom attribué par le fabricant pour distinguer le produit et sous lequel le produit sera vendu ou publicisé.
+
     properties:
       noc_number:
         type: string
-        description: The number assigned to the Notice of Compliance.
+        description: Le numéro attribué à un avis de conformité.
+
       noc_br_brand_id:
         type: string
-        description: The identification number assigned to the brand.
+        description: Le numéro d'identification attribué à une marque.
+
       noc_br_brandname:
         type: string
-        description: The brand name for the drug product.
+        description: Le nom commercial du produit pharmaceutique.
+
       noc_br_product_id:
         type: string
-        description: The identification number assigned to the DIN product.
+        description: Le numéro d'identification attribué à un produit pharmaceutique.
+
       noc_br_din:
         type: string
-        description: The Drug Identification Number.
+        description: L'Identification numérique de drogue.
+
     xml:
       name: DrugProduct
 
   MedicinalIngredient:
     type: object
-    description: A medicinal ingredient is any component that has medicinal properties, and supplies pharmacological activity or other direct effect in the diagnosis, cure, mitigation, treatment or prevention of disease, or to affect the structure or any function of the body of man or other animals.
+    description: Tout composant qui possède des propriétés médicinales, qui provoque une activité pharmacologique ou qui a des répercussions directes sur le diagnostic, la guérison, l'atténuation, le traitement ou la prévention des maladies, ou qui affecte la structure ou toute fonction du corps de l'être humain ou d'autres animaux.
     properties:
       noc_number:
         type: string
-        description: The number assigned to the Notice of Compliance.
+        description: Le numéro attribué à un avis de conformité.
+
       noc_pi_din_product_id:
         type: string
-        description: The identification number assigned to the DIN product.
+        description: Le numéro d'identification attribué à un produit pharmaceutique.
+
       noc_pi_medic_ingr_name:
         type: string
-        description: The medicinal ingredient name.
+        description: Le nom de l'ingrédient médicinal.
+
       noc_pi_strength:
         type: string
-        description: The strength of the medicinal ingredient.
+        description: Le concentration de l'ingrédient médicinal.
+
       noc_pi_unit:
         type: string
-        description: The medicinal ingredient unit.
+        description: L'unité de l'ingrédient médicinal.
+
       noc_pi_basic_unit:
         type: string
-        description: The medicinal ingredient dosage unit.
+        description: L’unité posologique de l’ingrédient médicinal.
+
     xml:
       name: MedicinalIngredient
 
   NoticeOfCompliance:
     type: object
     description: |
-      A Notice of Compliance is a notification, issued pursuant to paragraph C.08.004(1)(a), indicating that a manufacturer has complied with sections C.08.002 or C.08.003 and C.08.005.1 of the Food and Drug Regulations. Notices of Compliance are issued to a manufacturer following the satisfactory review of a submission.
+      Un Avis de conformité (AC) est une notification délivrée en vertu du paragraphe C.08.004(1)(a), indiquant que le fabricant/promoteur se conforme aux articles C.08.002 ou C.08.003 et C.08.005.1 du Règlement sur les aliments et drogues. Un avis de conformité est émis si la présentation est jugée conforme après un examen complet.
 
-      An NOC/c is the authorization to market a drug ([such as (i.e.)] a Notice of Compliance (NOC)), with the condition that the manufacturer carries out more studies to verify the clinical benefit. The NOC, qualifying under the NOC/c policy (Notice of Compliance with Conditions: Revised Policy), is issued under section C.08.004 of the Food and Drug Regulations.
+      Un AC-C est une autorisation de mettre un médicament sur le marché (c'est-à-dire un avis de conformité), à la condition que le promoteur entreprenne des études supplémentaires pour en vérifier l'avantage clinique. L'avis de conformité, admissible en vertu de la politique sur les AC-C (Avis de conformité avec conditions (AC-C) - Politique révisée), est émis dans le cadre de l'article C.08.004 du Règlement sur les aliments et drogues.
     properties:
       noc_number:
         type: string
-        description: The number assigned to the Notice of Compliance.
+        description: Le numéro attribué à un avis de conformité.
+
       noc_date:
         type: string
-        description: The date the Notice of Compliance was issued.
+        description: La date à laquelle un avis de conformité a été émis.
+
       noc_manufacturer_name:
         type: string
-        description: The name of the manufacturer.
+        description: Le nom du fabricant.
+
       noc_status_with_conditions:
         type: string
-        description: Whether the product was authorized under the Notice of Compliance with Conditions Policy.
+        description: Si un produit était autorisé sous la politique sur les avis de conformité avec conditions.
+
       noc_on_submission_type:
         type: string
-        description: The submission type.
+        description: Le catégorie de la présentation.
+
       noc_is_suppliment:
         type: string
-        description: Whether the submission is a supplement.
+        description: Si la présentation est un supplément.
+
       noc_submission_class:
         type: string
-        description: The submission class.
+        description: La catégorie de présentation .
+
       noc_is_admin:
         type: string
-        description: Whether the submission was filed administratively.
+        description: Si la présentation a été déposée administrativement.
+
       noc_product_type:
         type: string
-        description: The type of drug product.
+        description: Le type de produit pharmaceutique.
+
       noc_crp_product_name:
         type: string
-        description: The name of the Canadian Reference Product.
+        description: Le nom du produit de référence canadien.
+
       noc_crp_company_name:
         type: string
-        description: The company name for the Canadian Reference Product.
+        description: Le nom de l'entreprise pour le produit de référence canadien.
+
       noc_crp_country_name:
         type: string
-        description: The country name for the Canadian Reference Product.
+        description: Le nom du pays pour le produit de référence canadien.
+
       noc_active_status:
         type: string
-        description: Whether or not the Notice of Compliance is active or suspended.
+        description: Si l'avis de conformité est active ou suspendu.
+
       noc_reason_supplement:
         type: string
-        description: If the submission is a supplement, the reason for the supplement.
+        description: Si la présentation est un supplément, le motif du supplément.
+
       noc_reason_submission:
         type: string
-        description: The reason for the submission.
+        description: Le motif de la présentation.
+
       noc_therapeutic_class:
         type: string
-        description: The therapeutic class of a drug product.
+        description: La classe thérapeutique attribuée à un produit pharmaceutique.
+
       noc_last_update_date:
         type: string
-        description: The date that the Notice of Compliance was last updated.
+        description: La dernière date à laquelle l'avis de conformité a été mis à jour.
+
     xml:
       name: NoticeOfCompliance
 
   RouteOfAdministration:
     type: object
     description: |
-      This term indicates the part of the body on which, through which or into which the product is to be introduced. (e.g. oral, topical, intramuscular, rectal, etc.)
+      Détermine la partie du corps sur laquelle, par laquelle ou dans laquelle le produit est administré (orale, topique, intramusculaire, rectale, etc.).
 
-      A product can have more than one route of administration (e.g. intravenous, intramuscular, intra-articular, etc.).
+      Un produit peut être administré de plusieurs façons (intraveineuse, intramusculaire, intra-articulaire, etc.).
     properties:
       noc_number:
         type: string
-        description: The number assigned to the Notice of Compliance.
+        description: Le numéro attribué à un avis de conformité.
+
       noc_pr_din_product_id:
         type: string
-        description: The identification number assigned to the DIN product.
+        description: Le numéro d'identification attribué à un produit pharmaceutique.
+
       noc_pr_route:
         type: string
-        description: The route of administration.
+        description: La voie d'administration.
+
     xml:
       name: RouteOfAdministration
 
   VeterinarySpecies:
     type: object
-    description: The type of species for a certain veterinary products (e.g. sheep, dog, cattle, and poultry).
+    description: Les espèces auxquelles les produits vétérinaires sont destinés (p. ex. mouton, chien, bovin et volaille).
     properties:
       noc_number:
         type: string
-        description: The number assigned to the Notice of Compliance.
+        description: Le numéro attribué à un avis de conformité.
+
       vet_species_desc:
         type: string
-        description: The animal species description.
+        description: La description de l'espèce animale.
+
     xml:
       name: VeterinarySpecies
 
@@ -346,7 +383,7 @@ parameters:
       - en
       - fr
     default: en
-    description: Define which language you would like the response to be in
+    description: Modifie la langue du résultat.
   QueryType:
     name: type
     type: string
@@ -355,18 +392,12 @@ parameters:
       - json
       - xml
     default: json
-    description: Define which media type you would like the content to be in
+    description: Modifie le format du résultat.
   QueryNoticeOfComplianceNumber:
     name: id
     type: string
     in: query
-    description: Limit results to those with a matching Notice of Compliance number
-  PathID:
-    name: id
-    description: The drug product code identifier
-    in: path
-    type: string
-    required: true
+    description: Affiche l'avis de conformité selon le numéro d'un avis de conformité spécifié dans la requête. number
   UserKeys:
     name: "user-key"
     type: string
